[package]
name = "ockam_get_started"
version = "0.1.0"
authors = ["Sylvan <sylvan.j.morris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ockam = { version = "0", features = ["ockam_transport_tcp", "ockam_vault"] }